--- a/delete.html
+++ b/delete.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Page</title>
+    <title>Delete Files</title>
 </head>
 <body>
-    <h1> Updating news code </h1>
- Hi !!! Welcome to News Page   
+    This page is to delete files
 </body>
 </html>
